[package]
name = "cplangproto"
version = "0.1.0"
authors = ["Michael Chelli <michaelchelli00@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lalrpop-util = "0.19"
regex = "1"

[build-dependencies]
lalrpop = "0.19"
